# quantlab

./: .gitignore  CLAUDE.md  PERFORMANCE.md  README.md  breakdown.md  handoff.md  program.md  progress.md  protocol.md  pyproject.toml  research_log.md  scoring.md
experiments/: autoresearch_fx-trend.tsv  event_jumps.jsonl  event_ssf_list.jsonl  fno_daily.jsonl  intraday_archive.jsonl  log.jsonl  meta_alloc.jsonl  nse_ban_list.jsonl  nse_index_changes.jsonl  paper_options.jsonl  paper_options_putw.jsonl  paper_options_vrp.jsonl  paper_trades.jsonl  paper_trades_deliv.jsonl  paper_trades_divcarry.jsonl  paper_trades_dualrot.jsonl  paper_trades_gl.jsonl  paper_trades_illiq.jsonl  paper_trades_ls.jsonl  paper_trades_macrobeta.jsonl  paper_trades_pairs.jsonl  paper_trades_trend.jsonl  paper_trades_volshock.jsonl
scripts/: README-schedule.md  paper_snapshot.cmd  snapshot.py
tests/: test_backtest.py  test_band_mr.py  test_bear_sleeve.py  test_blend.py  test_blend_portfolio.py  test_construction.py  test_data.py  test_deliv.py  test_divcarry.py  test_dualrot.py  test_ensemble.py  test_evaluation.py  test_event_studies.py  test_fno_collect.py  test_fno_far_iv.py  test_groww_client.py  test_h52_study.py  test_illiq.py  test_india_blend_study.py  test_india_ls.py  test_intraday_collect.py  test_live_paper.py  test_macrobeta.py  test_meta_alloc.py  test_microstructure.py  test_microstructure_walkforward.py  test_nse_events.py  test_nse_mto.py  test_optimization.py  test_pairs_rv.py  test_paper_options.py  test_paper_options_putw.py  test_paper_options_vrp.py  test_portfolio.py  (+13 more)
(+61 files in other folders)
